--- a/challenges/templates/challenges/challenge.html
+++ b/challenges/templates/challenges/challenge.html
@@ -1,15 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "layout.html" %}
 
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ month.capitalize }} challenge</title>
-  </head>
-
-  <body>
+{% block page_title %}
+  {{ month|title }}
+{% endblock %}
+ 
+{% block content %}
+    {% include "challenges/includes/header.html" %}
     <h1>{{ month|title }} challenge</h1>
-    <h2>{{ text }}</h2>
-  </body>
-
-</html>
+    {% if text != None %}
+      <h2>{{ text }}</h2>
+    {% else %}
+      <h2>No challenge yet</h2>
+    {% endif %}
+{% endblock %}
