--- a/challenges/templates/challenges/index.html
+++ b/challenges/templates/challenges/index.html
@@ -1,19 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "layout.html" %}
+{% load static %}
 
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>All challenges</title>
-  </head>
+{% block css_files %}
+<link rel="stylesheet" href="{% static "challenges/challenges.css" %}">
+{% endblock %}
 
-  <body>
-    <h1>All challenges</h1>
-    <ul>
-      {% for month in months %}
-        <li><a href="{% url "month-challenge" month %}">{{ month|title }}</a></li>
-      {% endfor %}
-    </ul>
-  </body>
+{% block page_title %}
+  All challenges
+{% endblock %}
 
-</html>
+<h1>All challenges</h1>
+
+{% block content %}
+{% include "challenges/includes/header.html" with active_page="index" %}
+  <ul>
+    {% for month in months %}
+      <li><a href="{% url "month-challenge" month %}">{{ month|title }}</a></li>
+    {% endfor %}
+  </ul>
+{% endblock %}
